# amadeus_ca

./: .env.example  .gitignore  CLAUDE.md  CODEX.md  COMPLETENESS_CHECKLIST.md  COMPLETENESS_REPORT.md  FILE_INDEX.md  README.md  START_HERE.md  WORKFLOW_INDEX.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
apps/: README.md
config/: README.md  config.example.json  config.schema.json
demo_package/: 01_project_overview.md  02_architecture_summary.md  03_demo_commands.md  04_dashboard_demo.md  05_phase_timeline.md  06_safety_boundaries.md  07_next_steps.md  08_teacher_presentation_outline.md  README.md
docs/: 00_project_brief.md  01_problem_definition.md  02_system_overview.md  03_glossary.md  04_development_roadmap.md  05_demo_plan.md  06_evaluation_plan.md  07_risk_and_safety.md  08_research_notes.md  09_efficiency_agent_survey_notes.md  10_conflict_and_staleness_review.md  11_brownfield_harness_workflow.md  12_extension_roadmap.md  13_multimodal_and_data_channels.md  14_zero_to_one_workflow.md  15_one_to_n_workflow.md  candidate_status_matrix.md  next_milestone_plan.md  progress_log.md  promotion_readiness_review.md  quick_resume.md  secrets_policy.md  test_environment_baseline.md
project_report/: 01_abstract.md  02_motivation_and_problem.md  03_system_architecture.md  04_harness_engineering_method.md  05_implementation_phases.md  06_evaluation_and_results.md  07_safety_and_risk_management.md  08_demo_and_dashboard.md  09_limitations.md  10_future_work.md  11_conclusion.md  12_presentation_script.md  README.md
scripts/: approve_review_candidate.py  (+41 more)
(+451 files in other folders)
